--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,10 +9,11 @@
 
 # #---Basic Definitions---# #
 for_window [class="^.*"] border pixel 2
-gaps inner 5
-gaps outer 5
+gaps inner 0  #5
+gaps outer 0  #5
 set $term --no-startup-id $TERMINAL
 set $mod Mod4
+set $alt Mod1
 set $stoprec --no-startup-id dmenurecord kill
 set $shutdown sudo -A shutdown -h now
 set $reboot sudo -A reboot
@@ -27,9 +28,15 @@ for_window [instance="dropdown_*"] sticky enable
 for_window [instance="dropdown_*"] scratchpad show
 for_window [instance="dropdown_tmuxdd"] resize set 625 450
 for_window [instance="dropdown_dropdowncalc"] resize set 800 300
+for_window [instance="dropdown_gpustatdd"] resize set 800 100
 for_window [instance="dropdown_tmuxdd"] border pixel 3
 for_window [instance="dropdown_dropdowncalc"] border pixel 2
 for_window [instance="dropdown_*"] move position center
+
+# Set behaviour when app in fullscreen opens pop up window
+#popup_during_fullscreen smart|ignore|leave_fullscreen
+#popup_during_fullscreen leave_fullscreen
+popup_during_fullscreen smart
 
 # #---Starting External Scripts---# #
 # mpd startup
@@ -44,17 +51,24 @@ exec --no-startup-id xcompmgr
 exec --no-startup-id remaps
 # Unclutter makes the mouse invisible after a brief period
 exec --no-startup-id unclutter
+# networkmanager applet
+exec --no-startup-id nm-applet --sm-disable
+exec --no-startup-id blueman-applet
 # Run the script to update the mpd i3block on change.
 exec_always --no-startup-id mpdupdate
 # Podboat automatic queue and download
 exec_always --no-startup-id podentr
+# Thinkpad dock events
+exec --no-startup-id dockd --daemon
 
 bar {
 	font pango:mono 10
 	status_command i3blocks
 	position top
+	#mode hide
+	#modifier $alt
 	mode dock
-	modifier None
+	modifier none
 }
 
 # #---Basic Bindings---# #
@@ -62,7 +76,10 @@ bindsym $mod+Return 		exec $term
 bindsym $mod+Shift+Return	exec --no-startup-id samedir
 
 bindsym $mod+Shift+space 	floating toggle
-bindsym $mod+space		focus mode_toggle
+#bindsym $mod+space		focus mode_toggle
+bindsym $mod+Shift+Control+space	layout toggle tabbed splith splitv
+bindsym $mod+Shift+Control+s	split vertical;; layout stacking;; exec --no-startup-id notify-send "i3: Created stacke split"
+
 
 bindsym $mod+Escape		workspace prev
 bindsym $mod+Shift+Escape 	exec --no-startup-id prompt "Exit i3?" "i3-msg exit"
@@ -86,11 +103,12 @@ bindsym $mod+Shift+q		[con_id="__focused__" instance="^(?!dropdown_).*$"] kill
 
 bindsym $mod+w			exec $term -e nmtui
 bindsym $mod+Shift+w		exec --no-startup-id $BROWSER
+bindsym $mod+$alt+Shift+w	exec --no-startup-id $ALTBROWSER
 
 bindsym $mod+e			exec $term -e neomutt && pkill -RTMIN+12 i3blocks
 bindsym $mod+Shift+e		exec --no-startup-id tutorialvids
 
-bindsym $mod+r 			exec $term -e $FILE
+bindsym $mod+r 			exec --no-startup-id dmenu_run
 bindsym $mod+Shift+r		exec --no-startup-id winresize
 
 bindsym $mod+t			split toggle
@@ -117,7 +135,7 @@ bindsym $mod+Shift+a		exec $term -e pulsemixer
 bindsym $mod+s			gaps inner current plus 5
 bindsym $mod+Shift+s		gaps inner current minus 5
 
-bindsym $mod+d			exec --no-startup-id dmenu_run
+bindsym $mod+d			exec $term -e $FILE
 bindsym $mod+Shift+d		gaps inner current set 0; gaps outer current set 0
 
 set $freeze Distraction-free mode (super+shift+f to reactivate bindings)
@@ -128,18 +146,23 @@ bindsym $mod+f			fullscreen toggle
 bindsym $mod+Shift+f		mode "$freeze" ;; exec --no-startup-id notify-send "<b>Distraction-free mode activated.</b> Press Super+Shift+f to return."
 
 bindsym $mod+g			workspace prev
-bindsym $mod+Shift+g		exec --no-startup-id gimp; workspace $ws5
+#bindsym $mod+Shift+g		exec --no-startup-id gimp; workspace $ws5
+bindsym $mod+Shift+g		exec --no-startup-id ddspawn gpustatdd
 
 bindsym $mod+h			focus left
+bindsym $mod+$alt+h		focus output left
 bindsym $mod+Shift+h		move left 30
 
 bindsym $mod+j			focus down
+bindsym $mod+$alt+j		focus output down
 bindsym $mod+Shift+j		move down 30
 
 bindsym $mod+k			focus up
+bindsym $mod+$alt+k		focus output up
 bindsym $mod+Shift+k		move up 30
 
 bindsym $mod+l			focus right
+bindsym $mod+$alt+l		focus output right
 bindsym $mod+Shift+l		move right 30
 
 bindsym $mod+z			gaps outer current plus 5
@@ -168,10 +191,12 @@ bindsym $mod+Home		workspace $ws1
 bindsym $mod+Shift+Home		move container to workspace $ws1
 bindsym $mod+End		workspace $ws10
 bindsym $mod+Shift+End		move container to workspace $ws10
-bindsym $mod+Prior		workspace prev
-bindsym $mod+Shift+Prior	move container to workspace prev
-bindsym $mod+Next		workspace next
-bindsym $mod+Shift+Next		move container to workspace next
+# Page Up
+#bindsym $mod+Prior		workspace prev
+#bindsym $mod+Shift+Prior	move container to workspace prev
+# Page Down
+#bindsym $mod+Next		workspace next
+#bindsym $mod+Shift+Next		move container to workspace next
 bindsym $mod+Tab		workspace back_and_forth
 bindsym $mod+XF86Back		workspace prev
 bindsym $mod+Shift+XF86Back	move container to workspace prev
@@ -183,6 +208,23 @@ bindsym $mod+slash		split vertical ;; exec $term
 bindsym $mod+Shift+slash	kill
 bindsym $mod+backslash		workspace back_and_forth
 
+# < key
+bindsym $mod+comma			focus output left
+bindsym $mod+Shift+comma		move container to output left; focus output left
+bindsym $mod+Shift+Control+comma	move workspace to output left
+# > key
+bindsym $mod+period			focus output right
+bindsym $mod+Shift+period		move container to output right; focus output right
+bindsym $mod+Shift+Control+period	move workspace to output right
+# Page Down
+bindsym $mod+Next			focus output down
+bindsym $mod+Shift+Next			move container to output down; focus output down
+bindsym $mod+Shift+Control+Next		move workspace to output down
+# Page Up
+bindsym $mod+Prior			focus output up
+bindsym $mod+Shift+Prior		move container to output up; focus output up
+bindsym $mod+Shift+Control+Prior	move workspace to output up
+
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -193,6 +235,39 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
+set $ws11 "11"
+set $ws12 "12"
+set $ws13 "13"
+set $ws14 "14"
+set $ws15 "15"
+set $ws16 "16"
+set $ws17 "17"
+set $ws18 "18"
+set $ws19 "19"
+set $ws20 "20"
+
+workspace $ws1 output primary
+workspace $ws2 output primary
+workspace $ws3 output primary
+workspace $ws4 output primary
+workspace $ws5 output primary
+workspace $ws6 output primary
+workspace $ws7 output primary
+workspace $ws8 output primary
+workspace $ws9 output primary
+# workspace 10 and 20 are always on laptop screen if available
+workspace $ws10 output eDP1 primary
+workspace $ws20 output eDP1 primary
+# workspace 11-20 is always on DP2-3 if available
+workspace $ws11 output DP2-3 primary
+workspace $ws12 output DP2-3 primary
+workspace $ws13 output DP2-3 primary
+workspace $ws14 output DP2-3 primary
+workspace $ws15 output DP2-3 primary
+workspace $ws16 output DP2-3 primary
+workspace $ws17 output DP2-3 primary
+workspace $ws18 output DP2-3 primary
+workspace $ws19 output DP2-3 primary
 
 # switch to workspace
 bindsym $mod+1		workspace $ws1
@@ -205,6 +280,16 @@ bindsym $mod+7		workspace $ws7
 bindsym $mod+8		workspace $ws8
 bindsym $mod+9		workspace $ws9
 bindsym $mod+0		workspace $ws10
+bindsym $mod+$alt+1	workspace $ws11
+bindsym $mod+$alt+2	workspace $ws12
+bindsym $mod+$alt+3	workspace $ws13
+bindsym $mod+$alt+4	workspace $ws14
+bindsym $mod+$alt+5	workspace $ws15
+bindsym $mod+$alt+6	workspace $ws16
+bindsym $mod+$alt+7	workspace $ws17
+bindsym $mod+$alt+8	workspace $ws18
+bindsym $mod+$alt+9	workspace $ws19
+bindsym $mod+$alt+0	workspace $ws20
 
 # move focused container to workspace
 bindsym $mod+Shift+1	move container to workspace $ws1
@@ -217,11 +302,22 @@ bindsym $mod+Shift+7	move container to workspace $ws7
 bindsym $mod+Shift+8	move container to workspace $ws8
 bindsym $mod+Shift+9	move container to workspace $ws9
 bindsym $mod+Shift+0	move container to workspace $ws10
+bindsym $mod+$alt+Shift+1	move container to workspace $ws11
+bindsym $mod+$alt+Shift+2	move container to workspace $ws12
+bindsym $mod+$alt+Shift+3	move container to workspace $ws13
+bindsym $mod+$alt+Shift+4	move container to workspace $ws14
+bindsym $mod+$alt+Shift+5	move container to workspace $ws15
+bindsym $mod+$alt+Shift+6	move container to workspace $ws16
+bindsym $mod+$alt+Shift+7	move container to workspace $ws17
+bindsym $mod+$alt+Shift+8	move container to workspace $ws18
+bindsym $mod+$alt+Shift+9	move container to workspace $ws19
+bindsym $mod+$alt+Shift+0	move container to workspace $ws20
 
 for_window [class="Pinentry"] sticky enable
 for_window [class="sent"] border pixel 0px
 for_window [title="GIMP Startup"] move workspace $ws5
 for_window [class="Gimp"] move workspace $ws5
+for_window [class="Mendeley Desktop"] move workspace $ws4
 for_window [window_role="GtkFileChooserDialog"] resize set 800 600
 for_window [window_role="GtkFileChooserDialog"] move position center
 for_window [title="Default - Wine desktop"] floating enable
@@ -237,7 +333,8 @@ bindsym $mod+F1		exec --no-startup-id groff -kejpt -mom ~/.local/share/larbs/rea
 bindsym $mod+F2		restart
 bindsym $mod+F3		exec --no-startup-id displayselect
 bindsym $mod+F4		exec --no-startup-id prompt "Hibernate computer?" "$hibernate"
-bindsym $mod+F5		exec --no-startup-id $netrefresh
+#bindsym $mod+F5		exec --no-startup-id $netrefresh
+bindsym $mod+F5		exec --no-startup-id toggleterminalbg
 bindsym $mod+F6		exec --no-startup-id torwrap
 bindsym $mod+F7		exec --no-startup-id td-toggle
 bindsym $mod+F8		exec --no-startup-id ~/.config/mutt/etc/mailsync.sh
