--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -16,7 +16,10 @@
   </alias>
   <alias>
     <family>monospace</family>
-    <prefer><family>Inconsolata</family></prefer>
+    <prefer>
+	    <family>Liberation Mono</family>
+	    <family>Inconsolata</family>
+    </prefer>
   </alias>
 
 </fontconfig>
