--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,174 +1,128 @@
-##############################
-#  _
-# | |_ _ __ ___  _   ___  __
-# | __| '_ ` _ \| | | \ \/ /
-# | |_| | | | | | |_| |>  <
-#  \__|_| |_| |_|\__,_/_/\_\
-#
-#############################
-#
-# COPY AND PASTE
-# http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
-#
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
+# {{{ general tmux settings
+    # reset tmux keybinding if reset file exists
+    # to generate it run
+    # tmux -f /dev/null -L temp start-server \; list-keys > ~/.tmux.reset.conf
+    # and escape (\) semicolons and put #,$,~ into single quotes ('...')
+    if-shell "test -f ~/.tmux.reset.conf" \
+        "unbind -a \; source ~/.tmux.reset.conf"
 
-# Setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+    # set options
+    set -g default-terminal "screen-256color"
+    set -g terminal-overrides "*88col*:colors=88,*256col*:colors=256,xterm*:XT"
+    set -g history-limit 10000
+    set -g bell-action any
 
-# Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-#
-############################################################################
-############################################################################
-# Reset Prefix
-############################################################################
-set -g prefix C-a
-bind-key a send-prefix # for nested tmux sessions
+    # Version-specific commands
+    # See: https://github.com/tmux/tmux/blob/master/CHANGES
+    run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 
-############################################################################
-# Global options
-############################################################################
-# large history
-set-option -g history-limit 10000
+    if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
+        "set -g mouse-select-pane on; set -g mode-mouse on; \
+        set -g mouse-resize-pane on; set -g mouse-select-window on"
 
-# colors
-setw -g mode-bg black
-set-option -g default-terminal "screen-256color" #"xterm-256color" # "screen-256color"
-set-option -g pane-active-border-fg green
+    # In version 2.1 "mouse" replaced the previous 4 mouse options
+    if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
+        "set -g mouse on"
 
-# utf8 support
-#set-window-option -g utf8 on
+    # UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
+    if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
+        "set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
 
+    setw -g automatic-rename on
+    setw -g clock-mode-style 24
+    setw -g clock-mode-colour green
 
-# basic settings
-set-window-option -g xterm-keys on # for vim
-set-window-option -g mode-keys vi # vi key
-set-window-option -g monitor-activity on
-set-window-option -g window-status-current-fg white
-setw -g window-status-current-attr reverse
+    # Use Vi mode
+    setw -g mode-keys vi
+    #set -g status-keys vi
+    set -s escape-time 0
+    setw -g xterm-keys on
 
-# Automatically set window title
-setw -g automatic-rename
+    set -g status-keys emacs
 
-# use mouse # More on mouse support http://floriancrouzat.net/2010/07/run-tmux-with-mouse-support-in-mac-os-x-terminal-app/
-#setw -g mode-mouse on
-#setw -g mouse-resize-pane on
-#set -g mouse-select-window on
-#set -g mouse-select-pane on
-set -g mouse on
-set -g history-limit 30000
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+    # Status Bar
+    set -g status-interval 1
+    set -g status-bg default
+    set -g status-fg white
+    #setw -g window-status-current-bg blue               # Highlighting the active window in status bar
+    set -g status-left '#[fg=white]#H#[default]'
+    set -g status-right '#[fg=green]#(cut -d " " -f 1,2,4 /proc/loadavg) #[fg=white]%Y-%m-%d %H:%M:%S#[default]'
 
-# vi movement keys
-# set-option -g status-keys vi
+    # pane borders
+     #set -g pane-active-border-fg white
+    #set -g pane-active-border-bg default
 
-############################################################################
-# Status Bar
-############################################################################
-#set-option -g status-utf8 on
-set-option -g status-justify right
-set-option -g status-bg black # colour213 # pink
-set-option -g status-fg cyan
-set-option -g status-interval 5
-set-option -g status-left-length 30
-set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
-set-option -g status-right '#[fg=red,bold][[ #(git branch) branch ]] #[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
-set-option -g visual-activity on
+    # Terminal emulator window title
+    set -g set-titles on
+    set -g set-titles-string '#S:#I.#P #W'
 
-# Titles (window number, program name, active (or not)
-set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T'
+    # Notifying if other windows has activities
+    setw -g monitor-activity on
+    set -g visual-activity off
 
+    # notify when a visual bell is sent from another window (finishing process)
+    # send bell after process finish with <command>; echo -e '\a'
+    set-window-option -g visual-bell on
+    set-window-option -g bell-action other
 
-############################################################################
-# Unbindings
-############################################################################
-#unbind [ # copy mode bound to escape key
-unbind j
-unbind C-b # unbind default leader key
-unbind '"' # unbind horizontal split
-unbind %   # unbind vertical split
+    # restoring vim sessions
+    set -g @resurrect-strategy-vim 'session'
+
+# }}}
+
+# {{{ key bindings
+
+    # command for accesing nested tmux session
+    bind-key -n C-q send-prefix
+
+    #bind-key s save-buffer ~/.tmux-buffer \; run-shell "xsel -i -b <~/.tmux-buffer && rm ~/.tmux-buffer"
+    bind-key s run "tmux save-buffer - | xclip -i -sel clipboard"
+
+    # Toggle mouse on/off with Ctrl-b Alt-m
+    if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
+        'bind M-m run-shell "if [[ $(tmux showw -g | grep mode-mouse.*on) ]]; then export toggle=off; else export toggle=on; fi; tmux display-message \"Mouse: \$toggle\"; tmux set -g mode-mouse \$toggle &> /dev/null; for cmd in mouse-select-pane mouse-resize-pane mouse-select-window; do tmux set -g \$cmd \$toggle &> /dev/null; done;"'
+    # In version 2.1 "mouse" replaced the previous 4 mouse options
+    if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
+        'bind M-m set -g mouse \; display "Mouse #{?mouse,ON,OFF}"'
 
 
-############################################################################
-# Bindings
-############################################################################
-# reload tmux conf
-bind-key r source-file ~/.tmux.conf
+    # use current directory in split-window
+    # (new-window uses default directory where tmus was started)
+    bind '"' split-window -c "#{pane_current_path}"
+    bind % split-window -h -c "#{pane_current_path}"
+    #bind c new-window -c "#{default_path}"
 
-#bind Escape copy-mode
+    # split panes using | and _
+    bind | split-window -h -c "#{pane_current_path}"
+    bind _ split-window -v -c "#{pane_current_path}"
 
-# new split in current pane (horizontal / vertical)
-bind-key c split-window -v # split pane horizontally
-bind-key v split-window -h # split pane vertically
+    # pane movement
+    bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+    bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
-# list panes
-bind-key Space list-panes
+# }}}
 
-# break-pane
-bind-key Enter break-pane
+# source local tmux config file if it exists
+if-shell "test -f ~/.tmux.local.conf" "source ~/.tmux.local.conf"
 
-# join-pane [-dhv] [-l size | -p percentage] [-s src-pane]
-# [-t:dst-window.dst-pane] (destination window (dot) destination pane
-#                (alias: joinp)
-#
-#bind C-j command-prompt "joinp"
-#bind C-j command-prompt "join-pane"
-#bind-key j command-prompt "join-pane -s '%%'"
-#bind-key j command-prompt "joinp -t:0"
-bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
+# {{{ plugins
 
-#previous pane
-bind-key -n C-up prev
-bind-key -n C-left prev
+    # List of plugins
+    set -g @plugin 'tmux-plugins/tpm'
+    set -g @plugin 'tmux-plugins/tmux-sensible'
+    # C-hjkl for navigation vim splits and tmux panes
+    set -g @plugin 'christoomey/vim-tmux-navigator'
+    set -g @plugin 'tmux-plugins/tmux-resurrect'
+    #set -g @plugin 'tmux-plugins/tmux-continuum'
 
-#next pane
-bind-key -n C-right next
-bind-key -n C-down next
+    # Other examples:
+    # set -g @plugin 'github_username/plugin_name'
+    # set -g @plugin 'git@github.com/user/plugin'
+    # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-############################################################################
-# windows
-############################################################################
-set-window-option -g window-status-current-bg red
-bind C-j previous-window
-bind C-k next-window
-bind-key C-a last-window # C-a C-a for last active window
-bind A command-prompt "rename-window %%"
-# By default, all windows in a session are constrained to the size of the
-# smallest client connected to that session,
-# even if both clients are looking at different windows.
-# It seems that in this particular case, Screen has the better default
-# where a window is only constrained in size if a smaller client
-# is actively looking at it.
-setw -g aggressive-resize on
+    # # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+    run '~/.tmux/plugins/tpm/tpm'
 
-############################################################################
-# panes
-############################################################################
-# Navigation ---------------------------------------------------------------
-# use the vim motion keys to move between panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# }}}
 
-# Resizing ---------------------------------------------------------------
-bind-key -r C-h resize-pane -L
-bind-key -r C-j resize-pane -D
-bind-key -r C-k resize-pane -U
-bind-key -r C-l resize-pane -R
-
-############################################################################
-# layouts
-############################################################################
-bind o select-layout "active-only"
-bind M-- select-layout "even-vertical"
-bind M-| select-layout "even-horizontal"
-bind M-r rotate-window
-
-
-# focus on first window
-# select-window -t 0
+# vim: tabstop=4 shiftwidth=4 expandtab smarttab smartindent
