Add htop to gpu dropdown monitor

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,9 +28,10 @@ for_window [instance="dropdown_*"] sticky enable
 for_window [instance="dropdown_*"] scratchpad show
 for_window [instance="dropdown_tmuxdd"] resize set 625 450
 for_window [instance="dropdown_dropdowncalc"] resize set 800 300
-for_window [instance="dropdown_gpustatdd"] resize set 800 100
+for_window [instance="dropdown_gpustatdd"] resize set 800 400
 for_window [instance="dropdown_tmuxdd"] border pixel 3
 for_window [instance="dropdown_dropdowncalc"] border pixel 2
+for_window [instance="dropdown_gpustatdd"] border pixel 3
 for_window [instance="dropdown_*"] move position center
 
 # Set behaviour when app in fullscreen opens pop up window
