--- a/.tmuxp/b2c.yaml
+++ b/.tmuxp/b2c.yaml
@@ -20,7 +20,8 @@ windows:
     - conda activate b2c
     - ~/.scripts/tools/b2c_vim_source
   window_name: b2c
-- layout: c43f,136x74,0,0,2
+- focus: 'true'
+  layout: c43f,136x74,0,0,2
   options:
     automatic-rename: 'off'
   panes:
@@ -36,13 +37,12 @@ windows:
     shell_command: nvim index.md
   start_directory: /home/denis/tubcloud/home/projects/brian2cuda/brian2cuda-wiki
   window_name: wiki
-  window_idx: 8
-- focus: 'true'
-  layout: c441,136x74,0,0,4
+  window_index: 8
+- layout: c441,136x74,0,0,4
   options:
     automatic-rename: 'off'
   panes:
   - focus: 'true'
     shell_command: notes
   window_name: notes
-  window_idx: 9
+  window_index: 9
