--- a/.config/i3/config
+++ b/.config/i3/config
@@ -346,10 +346,12 @@ bindsym $mod+F7		exec --no-startup-id scrcpy-dpt
 bindsym $mod+F8		exec --no-startup-id ~/.config/mutt/etc/mailsync.sh
 bindsym $mod+F9		exec --no-startup-id dmenumount
 bindsym $mod+F10	exec --no-startup-id dmenuumount
-bindsym $mod+F11	exec --no-startup-id ducksearch
+#bindsym $mod+F11	exec --no-startup-id ducksearch
+bindsym $mod+F11	exec --no-startup-id googlesearch
 #bindsym $mod+F12	exec $term -e nmtui
 # set gaps for large screen width
 bindsym $mod+F12 	gaps horizontal current set 500; gaps vertical current set 20
+bindsym $mod+Shift+F12 	gaps horizontal current set 300; gaps vertical current set 20
 
 # #---Arrow Keys---# #
 bindsym $mod+Left		focus left
