--- a/.tmuxp/b2c.yaml
+++ b/.tmuxp/b2c.yaml
@@ -36,11 +36,20 @@ windows:
     automatic-rename: 'off'
   panes:
   - focus: 'true'
+    shell_command:
+    - ssh cluster -t "tmux a || tmux"
+  window_name: cluster
+  window_index: 7
+- layout: c441,136x74,0,0,4
+  options:
+    automatic-rename: 'off'
+  panes:
+  - focus: 'true'
     shell_command: nvim index.md
   start_directory: /home/denis/tubcloud/home/projects/brian2cuda/brian2cuda-wiki
   window_name: wiki
   window_index: 8
-- layout: c441,136x74,0,0,4
+- layout: c442,136x74,0,0,5
   options:
     automatic-rename: 'off'
   panes:
