Add support for tmux resurrect

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,8 +65,15 @@
     set-window-option -g visual-bell on
     set-window-option -g bell-action other
 
-    # restoring vim sessions
-    set -g @resurrect-strategy-vim 'session'
+    # restoring neovim sessions
+    set -g @resurrect-strategy-nvim 'session'
+    # Restore pane contents
+    set -g @resurrect-capture-pane-contents 'on'
+    # Also restore ssh processes
+    set -g @resurrect-processes 'ssh'
+
+    # Automatically restore tmux state
+    set -g @continuum-restore 'on'
 
 # }}}
 
@@ -76,7 +83,7 @@
     bind-key -n C-q send-prefix
 
     #bind-key s save-buffer ~/.tmux-buffer \; run-shell "xsel -i -b <~/.tmux-buffer && rm ~/.tmux-buffer"
-    bind-key s run "tmux save-buffer - | xclip -i -sel clipboard"
+    #bind-key y run "tmux save-buffer - | xclip -i -sel clipboard &>/dev/null"
 
     # Toggle mouse on/off with Ctrl-b Alt-m
     if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
@@ -99,6 +106,12 @@
     # pane movement
     bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
     bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+    # tmux-ressurect uses C-s and C-r for save/restore, to change, uncomment here:
+    # set -g @resurrect-save 'S'
+    # set -g @resurrect-restore 'R'
+
+    # kill entire tmux session
+    bind C-x confirm-before -p "kill-session #S? (y/n)" kill-session
 
 # }}}
 
@@ -112,8 +125,14 @@ if-shell "test -f ~/.tmux.local.conf" "source ~/.tmux.local.conf"
     set -g @plugin 'tmux-plugins/tmux-sensible'
     # C-hjkl for navigation vim splits and tmux panes
     set -g @plugin 'christoomey/vim-tmux-navigator'
+    # Store/restore tmux sessions
     set -g @plugin 'tmux-plugins/tmux-resurrect'
-    #set -g @plugin 'tmux-plugins/tmux-continuum'
+    # Autmoatically store tmux session every 15 min
+    set -g @plugin 'tmux-plugins/tmux-continuum'
+    # Enable yanking to system clipboard with y in copy-mode and with mouse
+    # Also prefix-y copies command line (e.g. in bash) and prefix-Y copies PWD
+    # of current pane into clipboard
+    set -g @plugin 'tmux-plugins/tmux-yank'
 
     # Other examples:
     # set -g @plugin 'github_username/plugin_name'
