--- a/.local/share/applications/text.desktop
+++ b/.local/share/applications/text.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
 Type=Application
 Name=Text editor
-Exec=/usr/local/bin/st -e nvim %u
+#Exec=/usr/local/bin/st -e nvim %u
+Exec=/usr/local/bin/xfce4-terminal -e nvim %u
