--- a/.tmux.conf
+++ b/.tmux.conf
@@ -139,6 +139,11 @@ if-shell "test -f ~/.tmux.local.conf" "source ~/.tmux.local.conf"
     # set -g @plugin 'git@github.com/user/plugin'
     # set -g @plugin 'git@bitbucket.com/user/plugin'
 
+    # Install TMUX plugin manager if it doesn't exist
+    # https://github.com/tmux-plugins/tpm/blob/master/docs/automatic_tpm_installation.md
+    if-shell "test ! -d ~/.tmux/plugins/tpm" \
+        "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
     # # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
     run '~/.tmux/plugins/tpm/tpm'
 
