--- a/.config/i3/config
+++ b/.config/i3/config
@@ -485,7 +485,7 @@ exec --no-startup-id sleep 7 && chromium https://github.com/endeavouros-team/end
 #exec --no-startup-id blueberry-tray
 
 # networkmanager-applet
-#exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet
 
 # clipman-applet
 #exec --no-startup-id xfce4-clipman
